services/research-api/deployments/service/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: research-db
  name: research-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: research-db
  template:
    metadata:
      labels:
        io.kompose.service: research-db
    spec:
      containers:
        - name: research-db
          image: mcr.microsoft.com/mssql/server
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "10m"
              memory: "256Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
          ports:
            - containerPort: 1433
