services/research-api/deployments/service/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: research-api
  labels:
    io.kompose.service: research-api
  name: research-api
spec:
  ports:
  - name: grpc
    protocol: TCP
    port: 5050
    targetPort: 5050
  selector:
    io.kompose.service: research-api
